--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ __pycache__/
 *.pyo
 *.pyd
 venv/
+
+# Large video files (served locally, not tracked in git)
+*.mp4
+personalsite/staticfiles/videos/
+personalsite/main/static/videos/
